# student-project-pl-for-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
Codellama/: README.md  local_test.py
dataset/: add-function-call.txt  add-two-variables.txt  boolean-if-condition.txt  calculate-rectangle-area.txt  double-list-elements.txt  function-with-condition.txt  greeting-function.txt  if-else-string-output.txt  increment-with-condition.txt  list-creation-print.txt  list-operations.txt  multiply-conditionally.txt  small_dataset.txt  string-number-concat.txt  testcase4.txt  testcase9.txt
dataset-and-generator/: README.md  fuzzing-script.py
dataset-and-generator/dataset-generated/: condition_0.txt
dataset-generator/dataset-generated/: arithmetics_0.txt  arithmetics_1.txt  condition_1.txt
dataset-generator/templates/: arithmetics.txt  condition.txt
dataset/handwritten/: testcase11.txt  testcase6.txt  testcase7.txt  testcase8.txt  testcase9.txt
dataset_generator/: EnvStack.py  Fuzzer.py  README.md  Saver.py  fuzzer.py  fuzzing-script.py  fuzzing.py  fuzzing_reworked.py
dataset_generator/dataset/: sample_1.txt  sample_10.txt  (+18 more)
local_model/: README.md  comparing-script.py  local_codellama_base.py  timer.py  train_lora.py
nelox/: Expr.py  Stmt.py  ast_printer.py  interpreter.py  nelox_token.py  parser.py  pretty_printer.py  scanner.py  token_type.py
tests/: test_ast_printer.py  test_dataset.py  test_dummy.py  test_features.py  test_handwritten.py  test_interpreter.py  test_parser.py  test_pretty.py  test_scanner.py
tool/: generate_ast.py
(+11 files in other folders)
