[project]
name = "ml-for-pl-problems"
version = "0.1.0"
description = "Nelox, a toy programming language to experiment with code generation"
authors = [
    {"name" = "Roza", "email" = "roza.keshishian@jetbrains.com"},
    {"name" = "Azamat", "email" = "azamat.amanbay@jetbrains.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["nelox"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
